k8s-who+traefik-demo/whoareyou--traefik-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoareyou-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /wau
        backend:
          serviceName: whoareyou-service
          servicePort: 80
